--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-#empty
+sergiu:
+  name: Sergiu Harsan
+  email: sergiu.harsan@gmail.com
+  password_digest: <%= User.digest('password') %>
